Closed Bug 1614329 Opened 6 years ago Closed 6 years ago

style element's type attribute isn't parsed per the HTML spec rules

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

(Keywords: dev-doc-complete, site-compat)

Attachments

(1 file)

https://html.spec.whatwg.org/multipage/semantics.html#update-a-style-block step 4 specifies that we should only accept "" or "text/css" for the type attribute of style elements. But we currently parse it as a mimetype header.

https://searchfox.org/mozilla-central/source/testing/web-platform/tests/html/semantics/document-metadata/the-style-element/style_type.html is a test for this which fails in Gecko only.

Status: NEW → ASSIGNED
Priority: -- → P2
Summary: style element's title attribute isn't parsed per the HTML spec rules → style element's type attribute isn't parsed per the HTML spec rules
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d2c7a9b66822 Fix the handling of the type attribute of HTMLStyleElement; r=bzbarsky
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/21736 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Upstream PR merged by moz-wptsync-bot
Blocks: 1397822

Posted site compatibility note for web developers.

MDN Docs complete for this; see https://github.com/mdn/sprints/issues/2923#issuecomment-604743891 for full details.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: