Bug 1614329 - Fix the handling of the type attribute of HTMLStyleElement; r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D62254